package com.designPatterns.polymorphism;

public abstract class UIControl {
    public abstract void draw();
}
